trunk/Archive2/63/71b1784ad8f82b/output
main.cpp: In instantiation of 'R N::get_value(T&) [with R = int; T = Inner]':
main.cpp:16:32:   required from 'R N::get_value(T&) [with R = int; T = Outer]'
main.cpp:30:37:   required from here
main.cpp:16:32: error: 'struct Inner' has no member named 'inner'
     return get_value<R>(x.inner);
                                ^
main.cpp: In function 'R N::get_value(T&) [with R = int; T = Inner]':
main.cpp:17:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
